--- a/output.css
+++ b/output.css
@@ -2320,11 +2320,6 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.text-orange-300 {
-  --tw-text-opacity: 1;
-  color: rgb(253 186 116 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2732,11 +2727,6 @@ video {
   color: rgb(212 61 38 / var(--tw-text-opacity));
 }
 
-.hover\:text-blue-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
 .before\:hover\:text-center:hover::before {
   content: var(--tw-content);
   text-align: center;
@@ -2779,16 +2769,8 @@ video {
     margin-bottom: 20px;
   }
 
-  .md\:mb-\[70px\] {
-    margin-bottom: 70px;
-  }
-
   .md\:mt-\[-12px\] {
     margin-top: -12px;
-  }
-
-  .md\:mt-\[-30px\] {
-    margin-top: -30px;
   }
 
   .md\:mt-\[0px\] {
@@ -2841,6 +2823,10 @@ video {
 
   .md\:h-\[70\%\] {
     height: 70%;
+  }
+
+  .md\:h-\[773px\] {
+    height: 773px;
   }
 
   .md\:w-1\/3 {
@@ -2960,11 +2946,6 @@ video {
     padding-bottom: 120px;
   }
 
-  .md\:py-\[20px\] {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-
   .md\:py-\[30px\] {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -3071,8 +3052,8 @@ video {
     height: 768px;
   }
 
-  .lg\:w-\[100\%\] {
-    width: 100%;
+  .lg\:h-\[892px\] {
+    height: 892px;
   }
 
   .lg\:w-\[30\%\] {
